--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.amazon.alexa:alexa-skills-kit:1.1.2'
     compile 'com.amazonaws:aws-lambda-java-core:1.0.0'
     compile 'com.amazonaws:aws-java-sdk-dynamodb:1.9.40'
+    compile 'com.amazonaws:aws-java-sdk-elasticsearch:1.11.32'
 
     compile 'log4j:log4j:1.2.17'
     compile 'org.apache.commons:commons-lang3:3.3.2'
@@ -32,6 +33,7 @@ dependencies {
     compile 'org.eclipse.jetty:jetty-server:9.0.6.v20130930'
     compile 'org.eclipse.jetty:jetty-servlet:9.0.6.v20130930'
     compile 'org.slf4j:slf4j-api:1.7.10'
+    compile 'org.elasticsearch:2.4.0'
 }
 
 task fatJar(type: Jar) {
