--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>alexa-skills-kit-samples</groupId>
-  <artifactId>alexa-skills-kit-samples</artifactId>
+  <groupId>alexa-skills-kit-samples-hackday</groupId>
+  <artifactId>alexa-skills-kit-samples-hackday</artifactId>
   <packaging>jar</packaging>
   <version>1.0</version>
   <name>Alexa Skills Kit Samples</name>
@@ -61,6 +61,16 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-dynamodb</artifactId>
       <version>1.9.40</version>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-elasticsearch</artifactId>
+      <version>1.11.32</version>
+    </dependency>
+    <dependency>
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <version>2.4.0</version>
     </dependency>
   </dependencies>
 
