--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -9,6 +9,11 @@
   <url>http://developer.amazon.com/ask</url>
 
   <dependencies>
+	<dependency>
+		<groupId>io.searchbox</groupId>
+		<artifactId>jest</artifactId>
+		<version>2.0.3</version>
+	</dependency>
     <dependency>
       <groupId>com.amazon.alexa</groupId>
       <artifactId>alexa-skills-kit</artifactId>
@@ -70,7 +75,7 @@
     <dependency>
       <groupId>org.elasticsearch</groupId>
       <artifactId>elasticsearch</artifactId>
-      <version>2.4.0</version>
+      <version>2.3.0</version>
     </dependency>
   </dependencies>
 
